@@ -1,3 +1,5 @@
+18.jan (ws)
+      - fix #8735: Beat corruption in copy paste of partial measure
 17.jan (la)
       - fix #8750: Crashes with system containing only vertical box
       - fix #6736: Preferences Menu disabled in non english. Avoid merging of menus.
